Fix error because of static object field in InjectionValue

--- a/findbugs-injection-detector/build.xml
+++ b/findbugs-injection-detector/build.xml
@@ -43,6 +43,7 @@
 		<delete>
 			<fileset dir="bin" includes="**" />
 			<fileset file="injection-detector.jar"/>
+            <fileset file="../findbugs/plugin/injection-detector.jar"/>
 		</delete>
 	</target>
 
