--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
 *.class
-JSR305-testCases/build/
-NullPointerBenchmark/build/
-bluej/bin/
-bluej/lib/
-bluej/dist/
-eclipsePlugin-test/bin_eclipse/
-eclipsePlugin/bin_build/
-eclipsePlugin/bin_eclipse/
-eclipsePlugin/dist/
-eclipsePlugin/zips/
-eclipsePlugin/lib/
-eclipsePlugin/local.properties
 findbugs/annotationJavaDoc/
 findbugs/apiJavaDoc/
 findbugs/bin/
@@ -31,31 +19,6 @@ findbugs/web/
 findbugsTestCases/build/
 findbugsTestCases/classesEclipse/
 findbugsTestCases/history/
-plugins/bugCollectionCloud/build/
-plugins/bugCollectionCloud/build/
-plugins/findbugsCommunalCloud/bin/
-plugins/findbugsCommunalCloud/build/
-plugins/googlecode/build/
-plugins/jdbcCloudClient/build/
-plugins/jira/build/
-plugins/noUpdateChecks/build/
-plugins/noUpdateChecks/build_eclipse/
-plugins/poweruser/build/
-plugins/poweruser/build/
-plugins/webCloudClient/build/
-plugins/webCloudClient/build/
-plugins/webCloudClient/lib/
-sandbox/localCloud/build/
-sandbox/localCloud/classes/
-server/appengine/war/WEB-INF/classes/
-server/appengineUpdate/war/WEB-INF/lib/
-server/appengineUpdate/war/WEB-INF/classes/
-server/common/build/
-server/common/classes/
-server/common/classesEclipse/
-server/webCommon/classesEclipse/
-server/webCommon/build/
-server/webUpdateCheck/classesEclipse/
-server/webUpdateCheck/build/
-target
-webCloudProtocol/build/
+findbugs-injection-detector/bin
+findbugs-injection-detector/injection-detector.jar
+out/
