Check for Method Annotation + Fix Ignored Return Contaminated Value Property when Analysis

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ findbugsTestCases/history/
 findbugs-injection-detector/bin
 findbugs-injection-detector/injection-detector.jar
 out/
+
+# if you remove the above rule, at least ignore user-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+# and these sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
