--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,5 @@
 *.class
-findbugs/annotationJavaDoc/
-findbugs/apiJavaDoc/
-findbugs/bin/
-findbugs/build/
-findbugs/classesEclipse/
-findbugs/doc/
-findbugs/jnlp/appengine.jnlp
-findbugs/lib/annotations.jar
-findbugs/lib/findbugs-ant.jar
-findbugs/lib/findbugs.jar
-findbugs/local.properties
-findbugs/optionalPlugin/
-findbugs/plugin/findbugsCommunalCloud.jar
-findbugs/plugin/webCloudClient.jar
-findbugs/src/doc/allBugDescriptions.html
-findbugs/src/doc/bugDescriptions.html
-findbugs/web/
-findbugsTestCases/build/
-findbugsTestCases/classesEclipse/
-findbugsTestCases/history/
+findbugs/
 findbugs-injection-detector/bin
 findbugs-injection-detector/injection-detector.jar
 out/
-
-# if you remove the above rule, at least ignore user-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-# and these sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
